2011-05-16  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Fix SourceJavaScriptTokenizer keyword parsing
        https://bugs.webkit.org/show_bug.cgi?id=60773

        * inspector/syntax-highlight-javascript-expected.txt:
        * inspector/syntax-highlight-javascript.html:

2011-05-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Yury Semikhatsky.

        [Qt] Fix crash in inspector/console/console-long-eval-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60858

        * platform/qt/Skipped:

2011-05-16  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Geoff Garen.

        https://bugs.webkit.org/show_bug.cgi?id=60866
        Evaluation order broken for empty alternatives in subpatterns

        Reverted https://bugs.webkit.org/show_bug.cgi?id=51395, and added
        test cases for /(|a)/ and /(a|)/, to test the evaluation order of
        subpattern matches with empty alternatives.

        * fast/regex/parentheses-expected.txt:
        * fast/regex/script-tests/parentheses.js:
        * fast/regex/script-tests/slow.js:
        * fast/regex/slow-expected.txt:

2011-05-16  Alejandro G. Castro  <alex@igalia.com>

        Skipped failing test, the fail already has a bug:

        [Qt][GTK] plugins/get-url-with-javascript-url.html fails
        https://bugs.webkit.org/show_bug.cgi?id=60834

        * platform/gtk/Skipped:

2011-05-15  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoff Garen & Michael Saboff.

        https://bugs.webkit.org/show_bug.cgi?id=60860
        Add layout tests for some regular expressions that used to crash the compiler.

        * fast/regex/parentheses-expected.txt:
        * fast/regex/script-tests/parentheses.js:

2011-05-06  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        media/video-volume-slider.html causes GTK 64 bit debug bot to time out